# NERION

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  REUSE.toml  SECURITY.md  nerion.cbom.json  nerion.spdx  nerion.spdx.license  package-lock.json  package.json  stryker.config.mjs  tsconfig.json  vitest.config.ts
.cargo/: audit.toml
.claude/: settings.json
.git-hooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
bench/: README.md  baseline-permit.json  baseline.json  run-permit.mjs  run.mjs
contracts/: NerionFinalityVerifier.sol  README.md  foundry.toml
crypto/: README.md
docs/: ACCOUNTABLE_SAFETY.md  AI-SECURITY-HARDENING-MAP.md  APEX_COUNCIL.md  APEX_SPRINT_BACKLOG.md  APEX_SPRINT_LOG.md  APEX_TEAMS.md  APEX_UPGRADE_PROGRAM.md  ASSURANCE-EXTENDED.md  ASSURANCE.md  AUDIT_PACKAGE.md  BENCHMARK-RESULTS.md  BENCHMARK.md  BEYOND_APEX_FRONTIER.md  CLEANROOM.md  CNSA-COMPLIANCE.md  COMPARISON.md  CONSENSUS-CAVEATS.md  DEPLOY.md  DEPLOY_HARDWARE.md  DESIGN_AROUND.md  DOMAIN_SEPARATION.md  EXECUTIVE_SUMMARY.md  FAIL_CLOSED.md  FINALITY_METAMORPHIC.md  FIPS-CONFORMANCE-MAP.md  FORMAL-SECURITY.md  FRONTIER.md  FRONTIER_INTEGRATION.md  FTO_CLAIM_CHART.md  FTO_PACKAGE.md  FTO_TODO.md  FUZZING.md  GOV_MANIFEST_BIND.md  GOV_PARAMS_BLINDNESS.md  GOV_POLICY_ALGEBRA.md  KEM_COMBINER_NEG.md  KEY_COMMITTING_SEAL.md  LAUNCH_READINESS.md  MUTATION-TESTING.md  (+15 more)
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/benches/: crypto_ops.rs  governance_roundtrip.rs
rust/examples/: manual_bench.rs
rust/fuzz/: .gitignore  Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_aead_open.rs  fuzz_hmac_verify.rs  fuzz_mlkem_roundtrip.rs
rust/src/: lib.rs
rust/tests/: kat.rs
(+365 files in other folders)
