# SPDX-FileCopyrightText: 2026 TRELYAN
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "polarseek-crypto"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
hmac = "0.13.0"
ml-dsa = "0.1.1"
ml-kem = "0.3.2"
sha2 = "0.11.0"
sha3 = "0.12.0"
shake = "0.1.0"
subtle = "2.6.1"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "governance_roundtrip"
harness = false

[[bench]]
name = "crypto_ops"
harness = false
